--- a/src/styles/_scaffolding.scss
+++ b/src/styles/_scaffolding.scss
@@ -1,4 +1,8 @@
 body {
-    background-image: url('#{$image-path}/pattern-body.jpg');
+    @include font-feature-settings('kern', 'liga', 'pnum');
     -webkit-font-smoothing: antialiased;
+    color: $text-color;
+    font-family: $font-family-base;
+    font-size: $font-size-base;
+    line-height: $line-height-base;
 }
