--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -33,7 +33,6 @@ $brand-primary-darker     : #00d9a8 !default;
  */
 $font-path                : '../fonts';
 $icon-font-path           : $font-path;
-$font-family-base         : 'AvenirNextLTPro-Regular';
 
 /**
  * Images
@@ -87,6 +86,7 @@ $link-hover-color         : $link-color;              // Link hover color.
 $link-hover-decoration    : underline !default;       // Link hover decoration.
 $base-spacing             : 20px;
 $base-small-spacing       : $base-spacing / 2;
+$font-family-base         : 'Open Sans';
 $font-size-base           : 18px !default; //14px !default;
 $line-height-base         : 1.5 !default; // 1.428571429 !default; // 20/14
 // Computed line-height (font-size * line-height) for use with margin, padding, etc.
