--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,12 +4,12 @@ html(lang="pt-BR")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="IE=edge, chrome=1")
-        include ./partials/favicon.jade
+        include ./partials/favicon.pug
         title=pageTitle
         link(rel="stylesheet", href="styles/app.css")
     body
         main
-            include ./partials/header.jade
-            include ./partials/content.jade
-            include ./partials/footer.jade
+            include ./partials/header.pug
+            include ./partials/content.pug
+            include ./partials/footer.pug
         script(src="scripts/app.js")
